# medical-insurance-audit

./: .gitignore  README.md  deploy.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  start.bat  start.sh
backend/: .env.example  DEPLOY.md  Dockerfile  alembic.ini  pyproject.toml  run.bat  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260320_0001_add_rule_id_to_audit_results.py
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  database.py  models.py  schemas.py
backend/app/routers/: __init__.py  audit.py  chat.py  patients.py
backend/app/services/: __init__.py  audit_service.py  deepseek_service.py  rule_engine.py
backend/app/utils/: init_data.py
docs/: 医保审核规则示例.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/views/: Chat.vue  Layout.vue  Patients.vue
